--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "firebase": "7.10.0",
+    "firebase-tools": "^7.14.0",
     "serve": "^11.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vuefire": "^2.2.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
